--- a/Segment_3/static/index.html
+++ b/Segment_3/static/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body class = "bg-dark">
@@ -64,7 +64,7 @@
             <div class = "row">
                 <div class="col-md-3">
                     <form class = "bg-dark", style="font-family: inherit; font-size: 1rem;"> 
-                      <p>Filter Search</p>
+                      <p>Filter Search(1:No medal won, 2:Won Medal</p>
                       <ul class = "bg-dark", style="font-family: inherit; font-size: 1rem;">
                         <li class="bg-dark list-group-item", style="font-family: inherit; font-size: 1rem;">
                             <label for="Sex">Enter Athlete Gender</label>
@@ -79,8 +79,8 @@
                             <input type="text" placeholder="Summer" id="Season" />
                         </li>
                         <li class="bg-dark list-group-item", style="font-family: inherit; font-size: 1rem;">
-                            <label for="Medal">Enter a Medal Type</label>
-                            <input type="text" placeholder="Gold" id="Medal" />
+                            <label for="Medal">Enter Medal Winning Status</label>
+                            <input type="text" placeholder="1" id="Medal" />
                         </li>
                         <li class="bg-dark list-group-item", style="font-family: inherit; font-size: 1rem;">
                             <label for="BMI">Enter Athlete BMI</label>
@@ -117,7 +117,7 @@
         </div>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-<script src="static/js/data.js"></script>
-<script src="static/js/app.js"></script>   
+<script src="data.js"></script>
+<script src="js/app.js"></script>   
 </body>
 </html>
