Add image and updated html

--- a/Segment_4/static/index.html
+++ b/Segment_4/static/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body class = "bg-dark">
+<body class = "bg-light">
     <div class = "wrapper">
-        <nav class = "navbar navbar-dark bg-dark navbar-expand-lg">
+        <nav class = "navbar navbar-info bg-info navbar-expand-lg">
             <a class = "navbar-brand" href = "index.html">Olympic Data </a>
         </nav>
         <div class="jumbotron">
@@ -63,26 +63,26 @@
         <div class = "container-fluid">
             <div class = "row">
                 <div class="col-md-3">
-                    <form class = "bg-dark", style="font-family: inherit; font-size: 1rem;"> 
-                      <p>Filter Search(1:No medal won, 2:Won Medal</p>
-                      <ul class = "bg-dark", style="font-family: inherit; font-size: 1rem;">
-                        <li class="bg-dark list-group-item", style="font-family: inherit; font-size: 1rem;">
+                    <form class = "bg-light", style="font-family: inherit; font-size: 1rem;"> 
+                      <p>Filter Search  (1:No medal won, 2:Won Medal)</p>
+                      <ul class = "bg-info", style="font-family: inherit; font-size: 1rem;">
+                        <li class="bg-info list-group-item", style="font-family: inherit; font-size: 1rem;">
                             <label for="Sex">Enter Athlete Gender</label>
                             <input type="text" placeholder="M/F" id="Sex" />
                         </li>
-                        <li class="bg-dark list-group-item", style="font-family: inherit; font-size: 1rem;">
+                        <li class="bg-info list-group-item", style="font-family: inherit; font-size: 1rem;">
                             <label for="Team">Enter Team</label>
                             <input type="text" placeholder="Finland" id="Team" />
                         </li>
-                        <li class="bg-dark list-group-item", style="font-family: inherit; font-size: 1rem;">
+                        <li class="bg-info list-group-item", style="font-family: inherit; font-size: 1rem;">
                             <label for="Season">Enter a Season</label>
                             <input type="text" placeholder="Summer" id="Season" />
                         </li>
-                        <li class="bg-dark list-group-item", style="font-family: inherit; font-size: 1rem;">
+                        <li class="bg-info list-group-item", style="font-family: inherit; font-size: 1rem;">
                             <label for="Medal">Enter Medal Winning Status</label>
                             <input type="text" placeholder="1" id="Medal" />
                         </li>
-                        <li class="bg-dark list-group-item", style="font-family: inherit; font-size: 1rem;">
+                        <li class="bg-info list-group-item", style="font-family: inherit; font-size: 1rem;">
                             <label for="BMI">Enter Athlete BMI</label>
                             <input type="text" placeholder="22" id="BMI" />
                         </li>
